--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -70,23 +70,24 @@ nav a:hover:after {
     width:100%;
 }
 .footer{
-    background: linear-gradient(#f9f9f9, #1897cc);
     height: 50vh;
     width: 100%;
     position: absolute;
     bottom: 0;
-    transform:translateY(185rem);
     z-index: -1;
 }
-.footer-text{
+.footer-container{
+    margin-bottom: 3%;
+    position:absolute;
+    bottom: 1rem;
+    width: 100%;
+}
+.footer-container-text{
     display: grid; 
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr; 
     grid-template-areas: ". . .";
     width: 100%;
-    margin-bottom: 3%;
-    position:absolute;
-    bottom: 0;
 }
 /*INDEX*/
 .background{
@@ -106,12 +107,12 @@ nav a:hover:after {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 8%;
+    width: 5rem;
 }
 .title-title {
     color: var(--backgroundgrey); 
     font-size: 75px;
-    font-family: raleway;
+    font-family: essonnes-text;
     text-align: center;
     text-shadow:  -4px 4px 3px #2b2b2b;
     margin: 0;
@@ -174,37 +175,51 @@ nav a:hover:after {
     position:static;
     font-family: adobe-calson-pro, serif;
     font-style: normal;
-    font-size: 3rem;
-    transform: translateY(10rem);
+    font-size: 2.5rem;
+    height: 40rem;
+}
+@media (max-width:111rem){
+    .quotes{
+        height: 52rem;
+    }
 }
 .quote-1{
-    background-image: url(../media/BrushStroke.png);
+    background-image: url(../media/brushstroke1.png);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:contain;
     margin: auto;
-    max-width: 33rem;
+    max-width: 50rem;
+    max-height: 30rem;
     text-align: center;
     padding: 5rem;
+    padding-bottom: 10rem;
     float: left;
-    transform: translateX(20%);
 }
 .quote-2{
-    background-image: url(../media/BrushStroke.png);
+    background-image: url(../media/brushstroke2.png);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     margin: auto;
-    max-width: 33rem;
+    max-width: 40rem;
     text-align: center;
     padding: 5rem;
     float: right;
-    transform: translateX(-100%);
-    transform: translateY(-10rem);
+}
+.quote-1-text{
+    width: 90%;
+    margin-left: auto;
+    margin-right:auto;
+}
+.quote-2-text{
+    width: 90%;
+    margin-left: auto;
+    margin-right:auto;
+    transform: translateY(-2.5rem);
 }
 .video{
     position: relative;
     height: 0;
     padding-bottom: 56.25%;
-    transform: translateY(50rem);
     z-index: 1;
 }
 .video iframe{
@@ -214,53 +229,95 @@ nav a:hover:after {
    top: 0;
    left: 10%;
 }
-.subscribe{
-    margin:auto;
-    width: 50%;
-    transform: translateY(40rem);
-}
 .subscribe-top{
-    font-size: 4rem;
     margin-left: auto;
     margin-right: auto;
+    font-size: 4rem;
     text-align: center;
+    white-space: nowrap;
+    width: 22rem;
+    height:4rem;
+    transform: translateY(-8rem);
 }
-.subscripe-bot{
-}
+.subscribe-bot{
+    margin-left: auto;
+    margin-right:auto;
+    width: 39rem;
+    transform: translate(-3.5rem, -5rem);}
 input{
     position:relative;
     left: 5rem;
     font-size: 2rem;
     box-sizing: border-box;
 }
-
-/*TEAM*/
+.button2{
+    text-align: center;
+    border-radius: 2rem;
+    width: 15.5rem;
+    margin-left: 0.5rem;
+    background: #f9f9f9;
+    border: 2px solid #db0024;
+    color: #db0024;
+    letter-spacing: 1px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.25s ease;
+}
+.button2:hover {
+    color:white;
+    background: var(--darkred)
+}
+.button2:active{
+    letter-spacing: 2px;
+}
+.button2:after{
+    content: "SUBSCRIBE";
+}
+.onclic {
+    width: 40px;
+    border-color: #bbbbbb;
+    border-width: 3px;
+    font-size: 0;
+    border-left-color: #1ECD97;
+    -webkit-animation: rotating 2s 0.25s
+}
+/*RECIPES*/
 .card{
     color:#ffffff;
     background-image: url(../media/singaporecrab.jpg);
     background-size: cover;
     padding: 10rem;
-    max-width: 35ch;
+    width: 35ch;
+    height: 35ch;
     border-radius: 0.5rem;
     overflow: hidden;
     font-family: adobe-calson-pro;
     transition: transform 500ms ease;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10rem;
+    margin-bottom: 5rem;
 }
 .card:hover {
     transform:scale(1.05);
 }
 .card-content{
-    background: rgba(35, 56, 102, 0.65);
-    transform: translate(-57%, 175%);
+    width: 38rem;
+    height: 35rem;
+    background: rgba(24, 151, 204, 0.65);
     transition: transform 500ms ease; 
-    text-indent: 1rem;
+    transform: translate(-10rem, 21.5rem);
 }
 .card:hover .card-content {
-    transform: translate(-57%, 100%);
+    transform: translate(-10rem, -8.5rem);
 }
 .card-title {
     position: relative;
-    width: max-content;
+    width: 10.2rem;
+    margin-left: auto;
+    margin-right: auto;
+    transform: translateY(0.4rem);
 }
 .card-title::after {
     content:"";
@@ -275,13 +332,60 @@ input{
 }
 .card-body{
     color: rgb(255 255 255 / 0.85);
+    margin-left:auto;
+    margin-right:auto;
 }
-.button{
-    cursor: pointer;
-    display: inline;
-    text-decoration: none;
-    color: lightblue;
-    background-color: red;
-    padding: 0.5em 1.25em;
-    border-radius: 0.25rem;   
+.card-recipe{
+    margin-left:auto;
+    margin-right: auto;
+    width: 80%;
+    display: grid; 
+    grid-template-columns: 1.3fr 0.7fr; 
+    grid-template-rows: 0.2fr 1.8fr; 
+    gap: 0px 10%; 
+    grid-template-areas: 
+        ". ."
+        ". ."; 
+}
+.background-recipes{
+    height: 100vh;
+    background-image: url(../media/chef.jpg);
+    background-size: cover;
+    position: static;
+    background-position: bottom;
+    background-repeat:no-repeat;
+}
+/*SUSTAINABILITY*/
+.background-sustainability{
+    height: 200vh;
+    background-image: url(../media/Sustainability.png);
+    background-size: cover;
+    position: static;
+    background-position: top;
+    background-repeat:no-repeat;
+}
+.starfish{
+    float: left;
+    transform:translateY(-50rem)
+}
+.section{
+    width: 65rem;
+    height: 200rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+.section1{
+    margin-right: auto;
+    margin-left: auto;
+    width: 65rem;
+    text-align: center;
+    transform: translateY(-50rem);
+}
+.section2{
+    transform: translateY(-45rem);
+    text-align: center;
+}
+.section3{
+    transform: translateY(-45rem);
+    text-align: center;
 }
