--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -364,9 +364,15 @@ input{
     background-position: top;
     background-repeat:no-repeat;
 }
+.header-sustainability-container{
+    margin-left:auto;
+    margin-right: auto;
+    width: 50%;
+    transform: translateY(18rem);
+}
 .starfish{
     float: left;
-    transform:translateY(-50rem)
+    transform:scaleY(-1) translateY(50rem);
 }
 .section{
     width: 65rem;
