--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -33,18 +33,17 @@ body {
     top: -10.1rem;
     left: 4.2rem;
 }
-nav {
-    position: relative;
-    top: -14.5rem;
-    height: 9vh;
+.nav-container{
+    position: absolute;
+    top: 2rem;
+    left: 17rem;
     width: 80vw;
-    max-width: 700px;
+    max-width: 70rem;
+}
+nav {
     display: flex;
     justify-content: space-around;
     align-items:center;
-    margin-left: 20rem;
-    margin-right: 5rem;
-    float: left;
 }
 nav a{
     position: relative;
@@ -70,6 +69,82 @@ nav a:hover{
 }
 nav a:hover:after {
     width:100%;
+}
+.menu, .hamburger{
+    display: none;
+}
+@media (max-aspect-ratio: 3/4){
+    nav a{
+        display: none;
+    }
+    .logo-container{
+        position: relative;
+        top: 5rem;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .logo{
+        display: none;
+    }
+    .decapod{
+        left: 0;
+    }
+    .slogan{
+        left: 0;
+    }
+    .menu-wrap .toggler{
+        position: absolute;
+        top: 5px;
+        left: 5px; 
+        z-index: 2;
+        cursor: pointer;
+        width: 70px;
+        height: 70px;
+        opacity: 0;
+    }
+    .menu-wrap .hamburger{
+        position:absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        width: 50px;
+        height: 50px;
+        padding: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .menu-wrap .hamburger > div {
+        position: relative;
+        width: 80%;
+        height: 3px;
+        background-color: var(--lightblue);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.4s ease;
+    }
+    .menu-wrap .hamburger > div::before,
+    .menu-wrap .hamburger > div::after{
+        content: '';
+        position: absolute;
+        z-index: 1;
+        top: -12px;
+        width: 100%;
+        height: 3px;
+        background: inherit;
+    }
+    .menu-wrap .hamburger > div::after{
+        top: 12px;
+    }
+    .menu-wrap .toggler:checked + .hamburger > div {
+        transform: rotate(135deg);
+    }
+    .menu-wrap .toggler:checked + .hamburger > div::before,
+    .menu-wrap .toggler:checked + .hamburger > div::after {
+        top: 0;
+        transform: rotate(90deg);
+    }
 }
 .footer{
     height: 50vh;
