--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -70,10 +70,16 @@ nav a:hover{
 nav a:hover:after {
     width:100%;
 }
-.menu, .hamburger{
+.menu, .hamburger, .toggler{
     display: none;
 }
 @media (max-aspect-ratio: 3/4){
+    .title{
+        z-index: -1;
+    }
+    .toggler{
+        display: unset;
+    }
     nav a{
         display: none;
     }
@@ -91,6 +97,12 @@ nav a:hover:after {
     }
     .slogan{
         left: 0;
+    }
+    .menu-wrap {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1;
     }
     .menu-wrap .toggler{
         position: absolute;
@@ -144,6 +156,60 @@ nav a:hover:after {
     .menu-wrap .toggler:checked + .hamburger > div::after {
         top: 0;
         transform: rotate(90deg);
+    }
+    .menu-wrap .toggler:checked:hover + .hamburger > div {
+        transform:rotate(225deg);
+    }
+    .menu-wrap .menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .menu-wrap .menu > div {
+        background: var(--lightblue);
+        border-radius: 50%;
+        width: 200vw;
+        height: 200vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transform: scale(0);
+        transition: all 0.4s ease;
+    }
+    .menu-wrap .menu > div > div {
+        text-align: center;
+        max-width: 200rem;
+        max-height: 200rem;
+        opacity: 0;
+        transition: opacity 0.4s ease;
+    }
+    .menu-wrap .menu > div > div > ul > li {
+        list-style: none;
+        color: #f9f9f9;
+        font-size: 1.5rem;
+        padding: 1rem;
+    }
+    .menu-wrap .menu > div > div > ul > li > a {
+        color: inherit;
+        text-decoration: none;
+        transition: color 0.4s ease;
+    }
+    .menu-wrap .toggler:checked ~ .menu {
+        visibility: visible;
+    }
+    .menu-wrap .toggler:checked ~ .menu > div {
+        transform: scale(1);
+        transition-duration: 0.4s;
+    }
+    .menu-wrap .toggler:checked ~ .menu > div > div {
+        opacity: 1;
+        transition: opacity 0.4s ease 0.4s;
     }
 }
 .footer{
