--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -31,6 +31,8 @@ body {
     margin-top: 0;
     margin-bottom: 0;
     color: black;
+    -webkit-text-stroke-width: 0.4px;
+    -webkit-text-stroke-color: white;
 }
 .slogan {
     font-family: bree, sans-serif;
@@ -41,6 +43,8 @@ body {
     text-decoration: none;
     margin-top: 0;
     color: black;
+    -webkit-text-stroke-width: 0.2px;
+    -webkit-text-stroke-color: white;
 }
 .nav-container{
     position: absolute;
