--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -30,9 +30,9 @@ body {
     text-decoration: none;
     margin-top: 0;
     margin-bottom: 0;
-    color: black;
-    -webkit-text-stroke-width: 0.4px;
-    -webkit-text-stroke-color: white;
+    color: #f9f9f9;
+    text-shadow:  -4px 4px 3px #2b2b2b;
+    -webkit-text-stroke-color: black;
 }
 .slogan {
     font-family: bree, sans-serif;
@@ -42,9 +42,8 @@ body {
     left: 4.6rem;
     text-decoration: none;
     margin-top: 0;
-    color: black;
-    -webkit-text-stroke-width: 0.2px;
-    -webkit-text-stroke-color: white;
+    color: #f9f9f9;
+    text-shadow:  -4px 4px 3px #2b2b2b;
 }
 .nav-container{
     position: absolute;
@@ -62,21 +61,24 @@ nav a{
     position: relative;
     text-decoration: none;
     padding: 30px 0px;
-    color: black;
+    color: #f9f9f9;
     padding: 6px;
+    text-shadow:  -4px 4px 3px #2b2b2b;
 }
 nav a:after{
     content: "";
     position: absolute;
-    background-color: #ff9028;
-    height: 2px;
+    background-color: var(--darkblue);
+    height: 1.6px;
     width: 0;
     left: 0;
     bottom: 5px;
     transition: 0.3s;
+    
 }
 nav a:hover{
-    color:#ff9028;
+    color:var(--darkblue);
+    text-shadow:  -1px 1px 1px #2b2b2b;
 }
 nav a:hover:after {
     width:100%;
@@ -263,7 +265,8 @@ nav a:hover:after {
     text-decoration: none;
     margin-top: 0;
     margin-bottom: 0;
-    color:black;
+    color:#f9f9f9;
+    text-shadow:  -4px 4px 3px #2b2b2b;
 }
 .footer-decapod-slogan{
     font-family: bree, sans-serif;
@@ -273,8 +276,8 @@ nav a:hover:after {
     left: 0.1rem;
     text-decoration: none;
     margin-top: 0;
-    color: black;
-
+    color: #f9f9f9;
+    text-shadow:  -4px 4px 3px #2b2b2b;
 }
 /*FONTS*/
 h1 {
@@ -465,7 +468,7 @@ a {
 .subscribe-bot{
     margin-left: auto;
     margin-right:auto;
-    width: 39rem;
+    width: 42rem;
     transform: translate(-3.5rem, -5rem);}
 input{
     position:relative;
