--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -541,7 +541,6 @@ input{
     height: 35ch;
     border-radius: 0.5rem;
     overflow: hidden;
-    font-family: adobe-calson-pro;
     transition: transform 500ms ease;
     position: relative;
     margin-left: auto;
@@ -607,7 +606,7 @@ input{
 }
 /*SUSTAINABILITY*/
 .background-sustainability{
-    height: 200vh;
+    height: 125vh;
     background-image: url(../media/Sustainability.png);
     background-size: cover;
     position: static;
@@ -639,19 +638,24 @@ input{
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke-width: 0.5px;
 }
-.starfish{
-    float: left;
-    transform: translateY(-55rem);
+.obligation{
+    margin-right: auto;
+    margin-left: auto;
+    width: 65rem;
+    text-align: center;
+    transform: translateY(20rem);
 }
 .section-container{
     position: relative;
     width: 100%;
     overflow: hidden;
     background: rgba(24, 151, 204, 0.4);
+    height: 250rem;
+    z-index: -224;
 }
 .section-container span{
     position: absolute;
-    bottom: -100px;
+    bottom: 0px;
     background: transparent;
     border-radius: 50%;
  
@@ -659,6 +663,7 @@ input{
     box-shadow: inset 0 0 35px
         rgba(255, 255, 255, 0.5);
     animation: animate 4s linear infinite;
+    z-index: -1;
 }
 .section-container span::before{
     content: "";
@@ -669,6 +674,7 @@ input{
     background:
       radial-gradient(#ffffffda, transparent);
     border-radius: 50%;
+    z-index: -1;
 }
 @keyframes animation {
     0% {
@@ -685,19 +691,14 @@ input{
 }
 .section{
     width: 65rem;
-    height: 200rem;
     margin-left: auto;
     margin-right: auto;
+    transform: translateY(50rem);
 }
 .section1{
-    margin-right: auto;
-    margin-left: auto;
-    width: 65rem;
-    text-align: center;
-    transform: translateY(-50rem);
 }
 .section2{
-    transform: translateY(-45rem);
+    transform: translateY(-50rem);
     text-align: center;
 }
 .section3{
@@ -723,8 +724,7 @@ input{
     width: 100%;
     position: absolute;
     bottom: 0;
-    z-index: 1;
-    transform: translateY(310rem);
+    transform: translateY(270rem);
     background-image: url(../media/seafloor.png);
     background-size: cover;
     background-position: top;
